Move the tunnel onto Kwik and drop the hand-written one